// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2xl Title 1`] = `
.pf-c-title.pf-m-2xl {
  display: block;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-2xl"
>
  2xl
   Title
</h1>
`;

exports[`3xl Title 1`] = `
.pf-c-title.pf-m-3xl {
  display: block;
  font-size: 1.75rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-3xl"
>
  3xl
   Title
</h1>
`;

exports[`4xl Title 1`] = `
.pf-c-title.pf-m-4xl {
  display: block;
  font-size: 2.25rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-4xl"
>
  4xl
   Title
</h1>
`;

exports[`lg Title 1`] = `
.pf-c-title.pf-m-lg {
  display: block;
  font-size: 1.125rem;
  font-weight: 500;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-lg"
>
  lg
   Title
</h1>
`;

exports[`md Title 1`] = `
.pf-c-title.pf-m-md {
  display: block;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-md"
>
  md
   Title
</h1>
`;

exports[`xl Title 1`] = `
.pf-c-title.pf-m-xl {
  display: block;
  font-size: 1.3125rem;
  font-weight: 400;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-xl"
>
  xl
   Title
</h1>
`;
